--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }],
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "App/"
         }
     },
     "autoload-dev": {
@@ -22,20 +22,20 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "militer/mvc-core": "*",
-        "militer/cms-core": "*"
+        "militer/cms-core": "*",
+        "militer/mvc-core": "*"
     },
     "require-dev": {
         "militer/dev-core": "*"
     },
     "scripts": {
         "post-install": [
-            "npm i",
             "php -r \"copy('config/config-example.php', 'config/config.php');\"",
-            "php -r \"copy('database/keys-example.php', 'database/keys.php');\""
+            "php -r \"copy('log/errors-example.log', 'log/errors.log');\""
         ],
         "post-create-project-cmd": [
-            "@post-install"
+            "@post-install",
+            "npm i"
         ],
         "post-install-cmd": [
             "@post-install"
