--- a/.htaccess
+++ b/.htaccess
@@ -2,17 +2,22 @@ AddDefaultCharset UTF-8
 Options -Indexes
 DirectoryIndex /public/index.php
 RewriteEngine On
-RewriteBase /public/
-RewriteRule ^404$ 404.php [L]
-ErrorDocument 403 404.php
-ErrorDocument 404 404.php
-ErrorDocument 410 410.php
+RewriteBase /
+RewriteRule ^favicon.ico$ public/favicon.ico [NC,L]
+RewriteRule ^robots.txt$ public/robots.txt [NC,L]
+RewriteRule ^sitemap.xml$ public/sitemap.xml [NC,L]
+RewriteRule ^404$ public/404.php [L]
+RewriteRule ^410$ public/410.php [L]
+ErrorDocument 403 404
+ErrorDocument 404 404
+ErrorDocument 410 410
 ### Убираем повторяющиеся слеши (//) в URL
 RewriteCond %{THE_REQUEST} //
 RewriteRule .* /$0 [R=301,L]
+## Редирект закрывающего слеша если не папка
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} /$
 RewriteRule (.*)/$ /$1 [R=301,L]
 ### Редирект всех запросов на единую точку входа если не файл
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule (.*) index.php [L]
+RewriteRule (.*) public/index.php [L]
