--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-    "name": "militer-militer",
+    "name": "sp-tut.ru",
     "version": "0.1.0",
-    "description": "Зависимости для пакета composer militer/militer Движок веб-сайта с микро-mvc-фреймворком и микро-cms",
+    "description": "sp-tut.ru",
     "main": "index.js",
-    "repository": "github:htmlcssjspro/militer",
     "scripts": {
         "dev": "webpack-dev-server --mode development",
         "prod": "webpack-dev-server --mode production",
@@ -15,39 +14,38 @@
         "defaults"
     ],
     "devDependencies": {
-        "@babel/cli": "^7.10.1",
-        "@babel/core": "^7.10.2",
-        "@babel/plugin-proposal-class-properties": "^7.10.1",
-        "@babel/preset-env": "^7.10.2",
-        "autoprefixer": "^9.8.1",
+        "@babel/cli": "^7.11.6",
+        "@babel/core": "^7.11.6",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/preset-env": "^7.11.5",
+        "autoprefixer": "^10.0.1",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.1.0",
         "cssnano": "^4.1.10",
-        "del": "^5.1.0",
-        "eslint": "^7.1.0",
+        "del": "^6.0.0",
+        "eslint": "^7.10.0",
         "gulp": "^4.0.2",
         "gulp-group-css-media-queries": "^1.2.2",
         "gulp-if": "^3.0.0",
-        "gulp-postcss": "^8.0.0",
+        "gulp-postcss": "^9.0.0",
         "gulp-rename": "^2.0.0",
-        "gulp-rtlcss": "^1.4.1",
         "gulp-sass": "^4.1.0",
         "gulp-sass-glob": "^1.1.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-webp": "^4.0.1",
         "node-sass": "^4.14.1",
         "path": "^0.12.7",
-        "through2": "^3.0.1",
+        "postcss": "^8.1.1",
+        "through2": "^4.0.2",
         "vinyl-ftp": "^0.6.1",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
+        "webpack": "^5.0.0-rc.4",
+        "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
-        "yargs": "^15.3.1"
+        "yargs": "^16.0.3"
     },
     "dependencies": {
-        "@babel/polyfill": "^7.10.1",
+        "@babel/polyfill": "^7.11.5",
         "ansi-colors": "^4.1.1",
-        "core-js": "^3.6.5",
-        "smart-grid": "^2.1.2"
+        "core-js": "^3.6.5"
     }
 }
