--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "sp-tut.ru",
+    "name": "militer",
     "version": "0.1.0",
-    "description": "sp-tut.ru",
+    "description": "militer",
     "main": "index.js",
     "scripts": {
         "dev": "webpack-dev-server --mode development",
@@ -14,16 +14,16 @@
         "defaults"
     ],
     "devDependencies": {
-        "@babel/cli": "^7.11.6",
-        "@babel/core": "^7.11.6",
-        "@babel/plugin-proposal-class-properties": "^7.10.4",
-        "@babel/preset-env": "^7.11.5",
-        "autoprefixer": "^10.0.1",
+        "@babel/cli": "^7.12.10",
+        "@babel/core": "^7.12.10",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/preset-env": "^7.12.10",
+        "autoprefixer": "^10.1.0",
         "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.1.0",
+        "babel-loader": "^8.2.2",
         "cssnano": "^4.1.10",
         "del": "^6.0.0",
-        "eslint": "^7.10.0",
+        "eslint": "^7.15.0",
         "gulp": "^4.0.2",
         "gulp-group-css-media-queries": "^1.2.2",
         "gulp-if": "^3.0.0",
@@ -31,21 +31,21 @@
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.1.0",
         "gulp-sass-glob": "^1.1.0",
-        "gulp-sourcemaps": "^2.6.5",
+        "gulp-sourcemaps": "^3.0.0",
         "gulp-webp": "^4.0.1",
-        "node-sass": "^4.14.1",
+        "node-sass": "^5.0.0",
         "path": "^0.12.7",
-        "postcss": "^8.1.1",
+        "postcss": "^8.2.1",
         "through2": "^4.0.2",
         "vinyl-ftp": "^0.6.1",
-        "webpack": "^5.0.0-rc.4",
-        "webpack-cli": "^3.3.12",
+        "webpack": "^5.10.0",
+        "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0",
-        "yargs": "^16.0.3"
+        "yargs": "^16.2.0"
     },
     "dependencies": {
-        "@babel/polyfill": "^7.11.5",
+        "@babel/polyfill": "^7.12.1",
         "ansi-colors": "^4.1.1",
-        "core-js": "^3.6.5"
+        "core-js": "^3.8.1"
     }
 }
