--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "militer/mvc-core": "*",
-        "ramsey/uuid": "*"
+        "militer/mvc-core": "^1.0.0",
+        "ramsey/uuid": "^4.1.0"
     },
     "require-dev": {},
     "scripts": {
